Addes some touch ups, I had missed that part where in the Tablet Design an image disapears, so fixeds up. Struggling with some minute text alignment but overall complete

--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@ header {
 nav a {
   /* display: inline-block;
 	float: left; */
-  color:black;
+  color:darkgray;
   text-decoration: none;
   margin: 5px 5px 5px;
   padding: 10px;
@@ -203,10 +203,11 @@ nav a {
 				text-align:center;
 			}
 			.main .front-text a{
-				padding:10px 30px 10px 30px;
+				width: auto;
+				padding:10px 20px 10px 20px;
 				text-align: center;
 				color: black;
-				border: solid black 2px;
+				border: solid black 1px;
 				font-size:16px;
 				font-style:none;
 			}
@@ -250,6 +251,8 @@ footer{
 		justify-content: space-evenly;
 	}
 	.container{
+		margin-top: auto;
+		padding-top: 0 ;
 		width: auto;
 	}
 		.container .main{
@@ -257,11 +260,23 @@ footer{
 			margin: auto;
 		}
 			.container .main .front-text{
+				display: flex;
 				width: auto;
+				flex-flow: column;
+				margin-top: auto;
+				justify-content: center;
 			}
+				.container .main .front-text h1{
+					margin-top:5px;
+					margin-bottom:10px;
+				}
+				.container .main .front-text a{
+					width:160px;
+					height:30px;
+					margin: 0 auto;
+				}
 			.container .main img{
-				width: 75%;
-				height: auto;
+				display: none;
 			}
 	.middle-img{
 		width: 100%;
@@ -287,7 +302,8 @@ footer{
 				border-bottom: solid black 1px;
 			}
 	.main{
-		margin:10px auto 15px auto;
+		margin:0 auto 20px auto;
+		padding-bottom: 10px;
 	}
 		.main img{
 			display:none;
@@ -296,6 +312,13 @@ footer{
 			height: auto;
 			padding-top: 5px;
 		}
+			.main .front-text h1{
+				margin: auto;
+				height:auto;
+			}
+			.main .front-text a{
+				margin-top: 20px;
+			}
 	.feat-about{
 		flex-flow: column;
 	}
